--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
         }
 
         td:nth-child(4),
-        td:nth-child(8) {
+        td:nth-child(6),
+        td:nth-child(9) {
             background: color-mix(in srgb, #e67e22 20%, transparent 80%);
             color: #e67e22;
             font-weight: 700;
         }
 
-        td:nth-child(9) {
+        td:nth-child(5) {
             background: color-mix(in srgb, #9b59b6 20%, transparent 80%);
             color: #9b59b6;
             font-weight: 700;
@@ -212,9 +213,9 @@
                         <th>9:00 - 10:00</th>
                         <th>10:10 - 11:10</th>
                         <th>11:20 - 12:00</th>
-                        <th>12:00 - 13:30</th>
-                        <th>13:30 - 14:30</th>
-                        <th>14:30 - 15:30</th>
+                        <th>12:00 - 14:30</th>
+                        <th>14:30 - 15:00</th>
+                        <th>15:00 - 16:00</th>
                         <th>16:00 - 19:00</th>
                         <th>19:00 - 20:00</th>
                         <th>20:00 - 22:00</th>
@@ -226,23 +227,23 @@
                         <td>عربی</td>
                         <td>دین و زندگی</td>
                         <td>ریاضی</td>
-                        <td>🍲 وقت غذا</td>
+                        <td>وقت غذا 🍽️</td>
+                        <td>استراحت ☕</td>
                         <td>فارسی</td>
-                        <td>زبان انگلیسی</td>
                         <td>برنامه‌نویسی</td>
-                        <td>🍽️ شام</td>
+                        <td>شام 🌙</td>
                         <td>برنامه‌نویسی با هوش مصنوعی</td>
                     </tr>
                     <tr>
-                        <td>یک‌شنبه</td>
+                        <td>یکشنبه</td>
                         <td>علوم فنون</td>
                         <td>فلسفه</td>
                         <td>روان‌شناسی</td>
-                        <td>🍲 وقت غذا</td>
+                        <td>وقت غذا 🍽️</td>
+                        <td>استراحت ☕</td>
                         <td>جامعه‌شناسی</td>
-                        <td>زبان انگلیسی</td>
                         <td>برنامه‌نویسی</td>
-                        <td>🍽️ شام</td>
+                        <td>شام 🌙</td>
                         <td>برنامه‌نویسی با هوش مصنوعی</td>
                     </tr>
                     <tr>
@@ -250,11 +251,11 @@
                         <td>جغرافیا</td>
                         <td>عربی</td>
                         <td>دین و زندگی</td>
-                        <td>🍲 وقت غذا</td>
+                        <td>وقت غذا 🍽️</td>
+                        <td>استراحت ☕</td>
                         <td>ریاضی</td>
-                        <td>زبان انگلیسی</td>
                         <td>برنامه‌نویسی</td>
-                        <td>🍽️ شام</td>
+                        <td>شام 🌙</td>
                         <td>برنامه‌نویسی با هوش مصنوعی</td>
                     </tr>
                     <tr>
@@ -262,23 +263,23 @@
                         <td>تاریخ</td>
                         <td>علوم فنون</td>
                         <td>فلسفه</td>
-                        <td>🍲 وقت غذا</td>
+                        <td>وقت غذا 🍽️</td>
+                        <td>استراحت ☕</td>
                         <td>روان‌شناسی</td>
-                        <td>زبان انگلیسی</td>
                         <td>برنامه‌نویسی</td>
-                        <td>🍽️ شام</td>
+                        <td>شام 🌙</td>
                         <td>برنامه‌نویسی با هوش مصنوعی</td>
                     </tr>
                     <tr>
                         <td>چهارشنبه</td>
                         <td>مرور ریاضی</td>
                         <td>مرور ریاضی</td>
-                        <td>مرور ریاضی</td>
-                        <td>🍲 وقت غذا</td>
-                        <td>زبان انگلیسی</td>
                         <td>مرور نکات</td>
+                        <td>وقت غذا 🍽️</td>
+                        <td>استراحت ☕</td>
+                        <td>زبان انگلیسی</td>
                         <td>برنامه‌نویسی</td>
-                        <td>🍽️ شام</td>
+                        <td>شام 🌙</td>
                         <td>برنامه‌نویسی با هوش مصنوعی</td>
                     </tr>
                 </tbody>
