--- a/index.html
+++ b/index.html
@@ -274,11 +274,8 @@
 
         let manualTheme = false;
 
-        // تابع اصلاح شده برای دریافت دقیق زمان تهران
         function getTehranTime() {
-            const now = new Date();
-            const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
-            return new Date(utc + (210 * 60000)); // افزودن 3:30 ساعت به UTC
+            return new Date(new Date().toLocaleString("en-US", {timeZone: "Asia/Tehran"}));
         }
 
         function getPersianWeekday() {
@@ -287,14 +284,13 @@
         }
 
         function getPersianDate() {
-            const options = {
+            return new Date().toLocaleDateString('fa-IR', {
                 weekday: 'long',
                 year: 'numeric',
                 month: 'long',
                 day: 'numeric',
                 timeZone: 'Asia/Tehran'
-            };
-            return new Intl.DateTimeFormat('fa-IR', options).format(getTehranTime());
+            });
         }
 
         function calculateKonkurCountdown() {
@@ -319,12 +315,7 @@
             const dayCell = document.createElement('td');
             dayCell.innerHTML = `
                 <div>${today}</div>
-                <div class="digital-clock">${getTehranTime().toLocaleTimeString('fa-IR', {
-                    hour: '2-digit',
-                    minute: '2-digit',
-                    second: '2-digit',
-                    timeZone: 'Asia/Tehran'
-                })}</div>
+                <div class="digital-clock">${getTehranTime().toLocaleTimeString('fa-IR')}</div>
             `;
             row.appendChild(dayCell);
 
